--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ body {
       text-align: center;
       
       .titulo{
-      font-size: 5vh;
+      font-size: 3vh;
       color: white;
       padding: 20px;
       background: rgba( #005ac2, .5);
@@ -132,11 +132,14 @@ body {
       }
     }
     @media screen and (max-width:600) {
-      .preguntas {
+      .contain{
         display: flex;
-        flex-direction: column;
-        img, .pregunta-contenido{
-          width: 100%;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        .cajas{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
         }
       }
     }
